--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ $(function(){
 								<!--menu-->
 								<div class="zt-mainmenu span9 visible-desktop">
 									<div id="zt-mainmenu-inner" class="row-fluid">
-										<div class="menusys_mega"><ul id="menusys_mega"><li class="first-item item active"><a href="index.html"  class=' active' id="menusys435"  title="Trang Chủ"><span class="no-image"><span class="menu-title">Trang Chủ</span></span></a></li><li class="item"><a href="index.php/gioi-thieu.html"  class=' item' id="menusys657"  title="Giới thiệu"><span class="no-image"><span class="menu-title">Giới thiệu</span></span></a></li><li class="item"><a href="index.php/du-an.html"  class=' item' id="menusys658"  title="Sản Phẩm"><span class="no-image"><span class="menu-title">Sản Phẩm</span></span></a></li><li class="item"><a href="index.php/chuyen-cafe.html"  class=' item' id="menusys536"  title="Chuyện Cafe"><span class="no-image"><span class="menu-title">Chuyện Cafe</span></span></a></li><li class="last-item item"><a href="index.php/lien-he.html"  class=' item' id="menusys565"  title="Liên hệ"><span class="no-image"><span class="menu-title">Liên hệ</span></span></a></li></ul></div>									</div>
+										<div class="menusys_mega"><ul id="menusys_mega"><li class="first-item item active"><a href="index.html"  class=' active' id="menusys435"  title="Trang Chủ"><span class="no-image"><span class="menu-title">Trang Chủ</span></span></a></li><li class="item"><a href="gioi-thieu.html"  class=' item' id="menusys657"  title="Giới thiệu"><span class="no-image"><span class="menu-title">Giới thiệu</span></span></a></li><li class="item"><a href="index.php/du-an.html"  class=' item' id="menusys658"  title="Sản Phẩm"><span class="no-image"><span class="menu-title">Sản Phẩm</span></span></a></li><li class="item"><a href="index.php/chuyen-cafe.html"  class=' item' id="menusys536"  title="Chuyện Cafe"><span class="no-image"><span class="menu-title">Chuyện Cafe</span></span></a></li><li class="last-item item"><a href="index.php/lien-he.html"  class=' item' id="menusys565"  title="Liên hệ"><span class="no-image"><span class="menu-title">Liên hệ</span></span></a></li></ul></div>									</div>
 								</div>
 								<!--end menu-->								
 							</div>
@@ -114,7 +114,7 @@ Coffee cung cấp sản phẩm cà phê rang nguyên hạt chất lượng cao n
 <p> </p>
 <p> </p>
 <p><strong>DakmilCoffee tự hào đại diện cho sản phẩm cà phê của vùng đất Dakmil. </strong>(Đắk Mil) là một huyện thuộc địa phận tỉnh Daknong (Đắk Nông), là nơi cung cấp hơn trên 1/3 tổng sản lượng cà phê của toàn tỉnh, với hơn 90% diện tích đất trồng được tập trung chuyên canh cây cà phê....</p>
-<p style="text-align: right;"><span style="color: #914a06;"><em><a href="index.php/gioi-thieu.html"><span style="color: #914a06;">Xem thêm</span></a></em></span></p></div>
+<p style="text-align: right;"><span style="color: #914a06;"><em><a href="gioi-thieu.html"><span style="color: #914a06;">Xem thêm</span></a></em></span></p></div>
 </div>
 		</div>
 	
